# ffc_dbricks_ht_genai

./: LICENSE  README.md  __init__.py  app.ipynb  app.py  doctor_notes_series.csv  features.py  information.md  normalized_pathology_extraction.csv  pathology.py  pathology_extraction.ipynb  pyproject.toml  symptoms.csv
data/doctor_notes/: doctor_note_20241005_000000_2_0.json  doctor_note_20241010_000000_2_0.json  doctor_note_20241010_160730_0_2.json  doctor_note_20241014_000000_2_0.json  doctor_note_20241015_160748_0_2.json  doctor_note_20241018_000000_2_0.json  doctor_note_20241018_160803_0_2.json  doctor_note_20241023_000000_2_0.json  doctor_note_20241024_160828_0_2.json  doctor_note_20241028_160856_0_2.json
data/users/: users.json
evaluation/: __init__.py  pathology_accuracy.py
models/: __init__.py  analytics.py  diagnosis.py  features.py  pathology.py  report.py  report_generator.py  symptoms.py  tools.py  visualizations.py
notebooks/: test.ipynb
notebooks/test_data/: medical_cases_with_pathologies.csv  pathology_extraction.csv  series_test.csv
tests/: __init__.py
utils/: json_parser.py
