[tool.poetry]
name = "ffc-dbricks-ht-genai"
version = "0.1.0"
description = ""
authors = ["Oscar Kirschstein <oscarschafer@futurefacts.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
huggingface = "^0.0.1"
datasets = "^3.0.1"
ipykernel = "^6.29.5"
groq = "^0.11.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
wordcloud = "^1.9.3"
gradio = "^5.1.0"
utils = "^1.0.2"
plotly = "^5.24.1"
kaleido = "0.2.1"
gradio-calendar = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
